--- a/wwwroot/index.html
+++ b/wwwroot/index.html
@@ -5,10 +5,11 @@
     <link rel="icon" type="image/svg+xml" href="/vite.svg" />
     <link rel="stylesheet" href="./assets/index.css">
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Vite + React + TS</title>
+    <title>Animal Dream</title>
   </head>
   <body>
     <div id="navigation"></div>
+    <div id="carousel"></div>
     <script type="module" src="/src/main.tsx"></script>
   </body>
 </html>
