Lorem Ipsum section added for a fuller look

--- a/wwwroot/index.html
+++ b/wwwroot/index.html
@@ -10,6 +10,7 @@
   <body>
     <div id="navigation"></div>
     <div id="carousel"></div>
+    <div id="about"></div>
     <script type="module" src="/src/main.tsx"></script>
   </body>
 </html>
