added empty product page

--- a/wwwroot/index.html
+++ b/wwwroot/index.html
@@ -11,6 +11,7 @@
     <div id="navigation"></div>
     <div id="carousel"></div>
     <div id="about"></div>
+    <div id="productBody"></div>
     <script type="module" src="/src/main.tsx"></script>
   </body>
 </html>
