--- a/wwwroot/products.html
+++ b/wwwroot/products.html
@@ -9,6 +9,7 @@
   </head>
   <body>
     <div id="navigation"></div>
+    <div id="productBody"></div>
     <script type="module" src="/src/main.tsx"></script>
   </body>
 </html>
