changed routing to react-router-dom

--- a/wwwroot/index.html
+++ b/wwwroot/index.html
@@ -9,9 +9,7 @@
   </head>
   <body>
     <div id="navigation"></div>
-    <div id="carousel"></div>
-    <div id="about"></div>
-    <div id="productBody"></div>
+    <div id="root"></div>
     <script type="module" src="/src/main.tsx"></script>
   </body>
 </html>
