--- a/wwwroot/index.html
+++ b/wwwroot/index.html
@@ -8,8 +8,7 @@
     <title>Animal Dream</title>
   </head>
   <body>
-    <div id="navigation"></div>
-    <div id="root"></div>
+    <div class="root" id="root"></div>
     <script type="module" src="/src/main.tsx"></script>
   </body>
 </html>
