--- a/web/wwwroot/index.html
+++ b/web/wwwroot/index.html
@@ -2,7 +2,7 @@
 <html lang="en">
   <head>
     <meta charset="UTF-8" />
-    <link rel="icon" type="image/svg+xml" href="/vite.svg" />
+    <link rel="icon" href="./assets/img/favicon.png" sizes="72x136" />
     <link rel="stylesheet" href="./assets/index.css">
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Animal Dream</title>
